# ebpf

./: README.md  build.py
c_code/: CMakeLists.txt  arm_android.cmake  arm_linux_cross.cmake  x86_linux.cmake
c_code/src/: main.c  zombie.c
hids/: .gitignore  Cargo.toml  README.md
hids/hids/: Cargo.toml  build.rs
hids/hids-common/: Cargo.toml
hids/hids-common/src/: lib.rs
hids/hids-ebpf/: Cargo.toml
hids/hids-ebpf/src/: main.rs  vmlinux_android.rs  vmlinux_armlinux.rs  vmlinux_x86.rs
hids/hids/src/: main.rs
