[[bin]]
name = "hids"
path = "src/main.rs"

[package]
name = "hids-ebpf"
version = "0.1.0"
edition = "2021"

[features]
default = [ "vmlinux_x86",]
vmlinux_x86 = []
vmlinux_android = []
vmlinux_armlinux = []

[dependencies.hids-common]
path = "../hids-common"

[dependencies.aya-ebpf]
workspace = true

[dependencies.aya-log-ebpf]
workspace = true

[build-dependencies.which]
workspace = true
